rhai/codegen/ui_tests/export_fn_path_attr.stderr
error: expecting attribute name
 --> ui_tests/export_fn_path_attr.rs:9:13
  |
9 | #[export_fn(rhai::name = "thing")]
  |             ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_path_attr.rs:19:8
   |
19 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
